--- a/Pipeline/config.yaml
+++ b/Pipeline/config.yaml
@@ -6,6 +6,7 @@ data_paths:
   artifacts_dir: "artifacts"
   data_artifacts_dir: "artifacts/data"
   model_artifacts_dir: "artifacts/models"
+  encoder_dir: "artifacts/encoders"
   X_train: "artifacts/data/X_train.csv"
   X_test: "artifacts/data/X_test.csv"
   Y_train: "artifacts/data/Y_train.csv"
@@ -13,6 +14,7 @@ data_paths:
 
 columns:
   ordinal_features: ["tenure_bins"]
+  critical_column: "TotalCharges"
   nominal_features: ["gender","Partner","Dependents","PhoneService","MultipleLines","InternetService","OnlineSecurity","OnlineBackup","DeviceProtection","TechSupport","StreamingTV","StreamingMovies","Contract","PaperlessBilling","PaymentMethod"]
   numerical_features: ["MonthlyCharges","TotalCharges"]
   remainder_features: ["SeniorCitizen"] 
@@ -48,6 +50,7 @@ outlier_detection:
   z_score_threshold: 3.0
 
 feature_binning:
+  binning_column: 'tenure'
   tenure_bins:
     Newer: [0, 12]
     Medium: [12, 48]
@@ -58,7 +61,7 @@ feature_binning:
     Long-term: 2
 
 feature_encoding:
-  nominal_columns: ["gender", "SeniorCitizen", "Partner", "Dependents", "PhoneService", "MultipleLines", "InternetService", "OnlineSecurity", "OnlineBackup", "DeviceProtection", "TechSupport", "StreamingTV", "StreamingMovies", "Contract", "PaperlessBilling", "PaymentMethod"]
+  nominal_columns: ["gender", "Partner", "Dependents", "PhoneService", "MultipleLines", "InternetService", "OnlineSecurity", "OnlineBackup", "DeviceProtection", "TechSupport", "StreamingTV", "StreamingMovies", "Contract", "PaperlessBilling", "PaymentMethod"]
   ordinal_mappings:
     TenureBins:
       Newer: 0
