--- a/Pipeline/kafka/server.properties
+++ b/Pipeline/kafka/server.properties
@@ -55,8 +55,8 @@ socket.request.max.bytes=104857600
 ############################# Log Basics #############################
 
 # A comma separated list of directories under which to store log files
-# Teaching Note: Using relative path to keep data within project directory
-log.dirs=runtime/kafka-logs
+# Teaching Note: Using /tmp to avoid NTFS filesystem issues in WSL
+log.dirs=/tmp/kafka-logs-pipeline
 
 # The default number of log partitions per topic. More partitions allow greater
 # parallelism for consumption, but this will also result in more files across
