--- a/Pipeline/requirements.txt
+++ b/Pipeline/requirements.txt
@@ -4,6 +4,7 @@ numpy>=1.21.0
 scikit-learn>=1.1.0
 scipy>=1.9.0
 imblearn
+pyspark>=3.4.0
 
 # ML Pipeline (ZenML will be added back later)
 # zenml>=0.50.0
